src/app/globals.css
@import 'tailwindcss';

@import './datatable-dark.css';

@layer components {
  /* White Theme */
  .btn {
    @apply px-4 py-2 text-sm text-white rounded transition-colors cursor-pointer font-semibold;

    &.blocked {
      @apply bg-gray-400 cursor-not-allowed;
    }
    &.btn-primary {
      @apply bg-blue-600 hover:bg-blue-700;
    }
    &.btn-secondary {
      @apply bg-gray-600 hover:bg-gray-700;
    }
    &.btn-danger {
      @apply bg-red-600 hover:bg-red-700;
    }
    &.btn-success {
      @apply bg-green-600 hover:bg-green-700;
    }
  }

  .btn-outline {
    @apply px-2 py-1 text-sm border rounded transition-colors cursor-pointer;

    &.btn-outline-primary {
      @apply border-blue-500 text-blue-500 hover:bg-blue-50;
    }
    &.btn-outline-secondary {
      @apply border-gray-500 text-gray-500 hover:bg-gray-50;
    }
    &.btn-outline-danger {
      @apply border-red-500 text-red-500 hover:bg-red-50;
    }
    &.btn-outline-success {
      @apply border-green-500 text-green-500 hover:bg-green-50;
    }
  }

  .toast {
    @apply text-gray-800 bg-white rounded-lg shadow-sm;
    /* @apply text-gray-500 bg-white rounded-lg shadow-sm dark:text-gray-400 dark:bg-gray-800; */
    .toast-info {
      @apply text-blue-500 bg-blue-100
      /* @apply text-blue-500 bg-blue-100 dark:bg-blue-800 dark:text-blue-200; */;
    }
    .toast-success {
      @apply text-green-500 bg-green-100
      /* @apply text-green-500 bg-green-100 dark:bg-green-800 dark:text-green-200; */;
    }
    .toast-error {
      @apply text-red-500 bg-red-100
      /* @apply text-red-500 bg-red-100 dark:bg-red-800 dark:text-red-200; */;
    }
    .toast-warning {
      @apply text-yellow-500 bg-yellow-100
      /* @apply text-yellow-500 bg-yellow-100 dark:bg-yellow-800 dark:text-yellow-200; */;
    }
    button {
      @apply bg-white text-gray-400 hover:text-gray-900 focus:ring-gray-300 hover:bg-gray-100
      /* @apply bg-white text-gray-400 hover:text-gray-900 focus:ring-gray-300 hover:bg-gray-100 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700; */;
    }
  }

  .bg-main {
    @apply bg-white;
  }
  .bg-secondary {
    @apply bg-gray-50;
  }
  .bg-sidebar {
    @apply hover:bg-gray-200;
  }
  .text-main {
    @apply text-gray-800;
  }
  .text-muted {
    @apply text-gray-600;
  }
  .primary-color {
    @apply text-blue-600;
  }
  .border-main {
    @apply border-gray-200;
  }
  .sidebar-expanded-colors {
    @apply bg-gray-800 text-white;
  }
  .input-field {
    @apply focus:ring-blue-500 disabled:bg-gray-100 disabled:text-gray-500 disabled:opacity-60;
  }

  .dark {
    .bg-main {
      @apply bg-gray-900;
    }
    .bg-secondary {
      @apply bg-gray-800;
    }
    .bg-sidebar {
      @apply hover:bg-gray-700;
    }
    .text-main {
      @apply text-white;
    }
    .text-muted {
      @apply text-gray-400;
    }
    .primary-color {
      @apply text-blue-400;
    }
    .border-main {
      @apply border-gray-700;
    }
    .sidebar-expanded-colors {
      @apply bg-gray-700 text-white;
    }
    .input-field {
      @apply focus:ring-blue-400 disabled:bg-gray-100 disabled:text-gray-500 disabled:opacity-60 bg-gray-800 text-white;
    }

    .btn-outline {
      &.btn-outline-primary {
        @apply hover:bg-blue-300;
      }
      &.btn-outline-secondary {
        @apply hover:bg-gray-300;
      }
      &.btn-outline-danger {
        @apply hover:bg-red-300;
      }
      &.btn-outline-success {
        @apply hover:bg-green-300;
      }
    }

    .toast {
      @apply text-gray-400 bg-gray-800;
      .toast-info {
        @apply bg-blue-800 text-blue-200;
      }
      .toast-success {
        @apply bg-green-800 text-green-200;
      }
      .toast-error {
        @apply bg-red-800 text-red-200;
      }
      .toast-warning {
        @apply bg-yellow-800 text-yellow-200;
      }
      button {
        @apply text-gray-500 hover:text-white bg-gray-800 hover:bg-gray-700;
      }
    }
  }
}

